[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/End/0e141c.png" type="Texture" id=1]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/End/FeedBackUpdated.gd" type="Script" id=3]
[ext_resource path="res://Assets/End/continue_btn_click.png" type="Texture" id=4]
[ext_resource path="res://Assets/End/continue_btn.png" type="Texture" id=5]
[ext_resource path="res://Scenes/End/questions.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/End/HTTPRequest.gd" type="Script" id=7]
[ext_resource path="res://Scenes/End/Recommend.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 2 )

[node name="EndUpdated" type="Node2D"]
script = ExtResource( 3 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource( 7 )

[node name="Recommend" type="HTTPRequest" parent="."]
script = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
margin_left = 0.534912
margin_top = 0.630005
margin_right = 1027.53
margin_bottom = 608.63
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionSet1" type="Control" parent="."]
margin_top = 0.667419
margin_bottom = 0.667419
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q1a6" parent="QuestionSet1" instance=ExtResource( 6 )]
margin_left = 217.861
margin_top = 448.735
margin_right = 841.86
margin_bottom = 511.735
size_flags_stretch_ratio = 0.0
text = "I would recommend this game to my friends to learn about vaccine creation"
autowrap = true

[node name="q1eSlider" type="HSlider" parent="QuestionSet1/q1a6"]
margin_left = 5.22589
margin_top = 78.351
margin_right = 397.226
margin_bottom = 98.351
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seven" type="Label" parent="QuestionSet1/q1a6"]
margin_left = 6.1395
margin_top = -319.402
margin_right = 391.139
margin_bottom = -305.402
text = "1              2              3             4              5             6              7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q1a5" parent="QuestionSet1" instance=ExtResource( 6 )]
margin_left = 217.861
margin_top = 368.735
margin_right = 841.86
margin_bottom = 412.735
size_flags_stretch_ratio = 0.0
text = "My experience was rewarding"

[node name="q1dSlider" type="HSlider" parent="QuestionSet1/q1a5"]
margin_left = 3.90506
margin_top = 44.5879
margin_right = 395.905
margin_bottom = 64.5879
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seven3" type="Label" parent="QuestionSet1/q1a5"]
margin_left = 7.0834
margin_top = -152.788
margin_right = 392.083
margin_bottom = -138.788
text = "1              2              3             4              5             6              7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q1a4" parent="QuestionSet1" instance=ExtResource( 6 )]
margin_left = 217.861
margin_top = 278.735
margin_right = 841.86
margin_bottom = 322.735
size_flags_stretch_ratio = 0.0
text = "I liked the graphics and images of this game."

[node name="q1cSlider" type="HSlider" parent="QuestionSet1/q1a4"]
margin_left = 5.32169
margin_top = 45.726
margin_right = 397.322
margin_bottom = 65.726
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seven2" type="Label" parent="QuestionSet1/q1a4"]
margin_left = 10.8963
margin_top = 32.5464
margin_right = 395.896
margin_bottom = 46.5464
text = "1              2              3             4              5             6              7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q1a3" parent="QuestionSet1" instance=ExtResource( 6 )]
margin_left = 217.861
margin_top = 188.735
margin_right = 841.86
margin_bottom = 232.735
size_flags_stretch_ratio = 0.0
text = "This experince was demanding or confusing."

[node name="q1bSlider" type="HSlider" parent="QuestionSet1/q1a3"]
margin_left = 5.63782
margin_top = 43.4996
margin_right = 397.638
margin_bottom = 63.4996
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seven4" type="Label" parent="QuestionSet1/q1a3"]
margin_left = 4.95029
margin_top = 209.359
margin_right = 389.95
margin_bottom = 223.359
text = "1              2              3             4              5             6              7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q1a2" parent="QuestionSet1" instance=ExtResource( 6 )]
margin_left = 217.86
margin_top = 99.3199
margin_right = 841.86
margin_bottom = 143.32
size_flags_stretch_ratio = 0.0
text = "I was absorbed in this experience"

[node name="q1aSlider" type="HSlider" parent="QuestionSet1/q1a2"]
margin_left = 4.13983
margin_top = 46.0127
margin_right = 396.14
margin_bottom = 66.0127
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seven5" type="Label" parent="QuestionSet1/q1a2"]
margin_left = 7.32904
margin_top = 414.126
margin_right = 392.329
margin_bottom = 428.126
text = "1              2              3             4              5             6              7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q1" parent="QuestionSet1" instance=ExtResource( 6 )]
margin_left = 217.878
margin_top = 48.7348
margin_right = 841.878
margin_bottom = 92.7348

[node name="QuestionSet2" type="Control" parent="."]
visible = false
margin_top = 0.667419
margin_bottom = 0.667419
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q2" parent="QuestionSet2" instance=ExtResource( 6 )]
margin_left = 213.913
margin_top = 43.9255
margin_right = 837.913
margin_bottom = 106.925
size_flags_stretch_ratio = 0.0
text = "Please choose the combination of nucleotides in mRNA."
autowrap = true

[node name="a" type="CheckBox" parent="QuestionSet2/q2"]
margin_left = -0.307709
margin_top = 36.9786
margin_right = 80.6923
margin_bottom = 75.9786
text = "A C G U"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a2" type="CheckBox" parent="QuestionSet2/q2"]
margin_left = 91.6573
margin_top = 36.9786
margin_right = 174.657
margin_bottom = 75.9786
text = "A D G U"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a3" type="CheckBox" parent="QuestionSet2/q2"]
margin_left = 191.231
margin_top = 36.384
margin_right = 272.231
margin_bottom = 75.384
text = "A C G T"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a4" type="CheckBox" parent="QuestionSet2/q2"]
margin_left = 287.473
margin_top = 36.9786
margin_right = 368.473
margin_bottom = 75.9786
text = "A U C T"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q4" parent="QuestionSet2" instance=ExtResource( 6 )]
margin_left = 206.11
margin_top = 286.439
margin_right = 822.11
margin_bottom = 349.439
size_flags_stretch_ratio = 0.0
text = "mRNA , the critical component in traditional vaccine, 
needs to be transported in a ________ to the host safely"

[node name="a" type="CheckBox" parent="QuestionSet2/q4"]
margin_left = -3.28073
margin_top = 63.1412
margin_right = 77.7193
margin_bottom = 102.141
rect_scale = Vector2( 1.2, 1.2 )
text = "Solution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a2" type="CheckBox" parent="QuestionSet2/q4"]
margin_left = 99.8201
margin_top = 60.8294
margin_right = 257.82
margin_bottom = 99.8295
rect_scale = Vector2( 1.2, 1.2 )
text = "Phospholipid bilayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a3" type="CheckBox" parent="QuestionSet2/q4"]
margin_left = 292.849
margin_top = 62.4498
margin_right = 441.849
margin_bottom = 101.45
rect_scale = Vector2( 1.2, 1.2 )
text = "Phosphorous Layer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a4" type="CheckBox" parent="QuestionSet2/q4"]
margin_left = 473.971
margin_top = 61.6591
margin_right = 615.971
margin_bottom = 100.659
rect_scale = Vector2( 1.2, 1.2 )
text = "Phosphate bilayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q3" parent="QuestionSet2" instance=ExtResource( 6 )]
margin_left = 211.107
margin_top = 137.298
margin_right = 871.107
margin_bottom = 198.298
rect_scale = Vector2( 0.97, 0.97 )
text = "Please type the corresponding mRNA from this DNA sequence : 
GAGCTTAACG"

[node name="a" type="TextEdit" parent="QuestionSet2/q3"]
margin_top = 73.0
margin_right = 628.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 1 )

[node name="q5" parent="QuestionSet2" instance=ExtResource( 6 )]
margin_left = 207.739
margin_top = 414.546
margin_right = 867.739
margin_bottom = 475.546
rect_scale = Vector2( 0.97, 0.97 )
text = "Normally, vaccines take 3-4 years to develop, test, and market. 
However, the COVID-19 vaccine came to market in less than ________"

[node name="a" type="CheckBox" parent="QuestionSet2/q5"]
margin_left = 320.141
margin_top = 70.2662
margin_right = 415.141
margin_bottom = 102.266
rect_scale = Vector2( 1.2, 1.2 )
text = "1 year"

[node name="a2" type="CheckBox" parent="QuestionSet2/q5"]
margin_left = 209.092
margin_top = 68.6297
margin_right = 322.092
margin_bottom = 101.63
rect_scale = Vector2( 1.2, 1.2 )
text = "6 months"

[node name="a3" type="CheckBox" parent="QuestionSet2/q5"]
margin_left = 102.182
margin_top = 67.6784
margin_right = 206.182
margin_bottom = 101.678
rect_scale = Vector2( 1.2, 1.2 )
text = "8 months"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a4" type="CheckBox" parent="QuestionSet2/q5"]
margin_left = -4.85968
margin_top = 64.727
margin_right = 99.1404
margin_bottom = 102.727
rect_scale = Vector2( 1.2, 1.2 )
text = "3 months"

[node name="QuestionSet3" type="Control" parent="."]
visible = false
margin_top = 0.667419
margin_bottom = 0.667419
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seven2" type="Label" parent="QuestionSet3"]
margin_left = 234.521
margin_top = 184.399
margin_right = 569.521
margin_bottom = 198.399
text = "1                  2                  3                  4                  5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q3" parent="QuestionSet3" instance=ExtResource( 6 )]
margin_left = 229.521
margin_top = 424.399
margin_right = 853.521
margin_bottom = 468.399
size_flags_stretch_ratio = 0.0
text = "This game increased my interest."

[node name="a3" type="HSlider" parent="QuestionSet3/q3"]
margin_left = -1.18542
margin_top = 48.9243
margin_right = 348.815
margin_bottom = 64.9243
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q2" parent="QuestionSet3" instance=ExtResource( 6 )]
margin_left = 227.587
margin_top = 289.144
margin_right = 876.587
margin_bottom = 333.144
size_flags_stretch_ratio = 0.0
text = "This game introduced me to the vaccine development process."

[node name="seven3" type="Label" parent="QuestionSet3/q2"]
margin_left = 6.93375
margin_top = 170.543
margin_right = 341.934
margin_bottom = 184.543
text = "1                  2                  3                  4                  5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a2" type="HSlider" parent="QuestionSet3/q2"]
margin_left = 1.0
margin_top = 44.0
margin_right = 342.0
margin_bottom = 60.0
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5

[node name="q1" parent="QuestionSet3" instance=ExtResource( 6 )]
margin_left = 225.011
margin_top = 157.303
margin_right = 849.011
margin_bottom = 218.303
size_flags_stretch_ratio = 0.0
text = "This game strengthened my chemistry knowledge.
"

[node name="seven4" type="Label" parent="QuestionSet3/q1"]
margin_left = 8.45056
margin_top = 159.529
margin_right = 343.451
margin_bottom = 173.529
text = "1                  2                  3                  4                  5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a1" type="HSlider" parent="QuestionSet3/q1"]
margin_left = 6.35678
margin_top = 38.0
margin_right = 346.357
margin_bottom = 58.0
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5

[node name="q" parent="QuestionSet3" instance=ExtResource( 6 )]
margin_left = 216.463
margin_top = 33.1784
margin_right = 840.463
margin_bottom = 94.1784
text = "Please answer questions below from a scale of 1 to 5
"

[node name="QuestionSet4" type="Control" parent="."]
visible = false
margin_top = 0.667419
margin_bottom = 0.667419
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q2" parent="QuestionSet4" instance=ExtResource( 6 )]
margin_left = 206.163
margin_top = 265.237
margin_right = 830.163
margin_bottom = 309.237
text = "To what extend did it impact your game-play?"

[node name="a2" type="TextEdit" parent="QuestionSet4/q2"]
margin_left = -3.05615
margin_top = 49.0
margin_right = 638.944
margin_bottom = 89.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q1" parent="QuestionSet4" instance=ExtResource( 6 )]
margin_left = 200.947
margin_top = 93.9014
margin_right = 860.947
margin_bottom = 154.901
text = "Throughout the game, how did you feel about the story line? 
"

[node name="a1" type="TextEdit" parent="QuestionSet4/q1"]
margin_top = 61.4026
margin_right = 642.0
margin_bottom = 101.403
custom_fonts/font = SubResource( 3 )

[node name="Next" type="TextureButton" parent="."]
margin_left = 861.098
margin_top = 520.365
margin_right = 987.098
margin_bottom = 587.365
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageNumber" type="Label" parent="."]
margin_left = 808.827
margin_top = 542.178
margin_right = 856.827
margin_bottom = 572.178
custom_fonts/font = SubResource( 4 )
text = "1 of 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thankyou" type="Label" parent="."]
visible = false
margin_left = 36.0
margin_top = 99.0
margin_right = 987.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 5 )
text = "Thank you for playing our game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wait" type="Label" parent="."]
visible = false
margin_left = 237.615
margin_top = 274.768
margin_right = 765.615
margin_bottom = 303.768
custom_fonts/font = SubResource( 5 )
text = "Please wait while we recommend you some articles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recommendations" type="Label" parent="."]
margin_left = 35.8108
margin_top = 175.0
margin_right = 1011.81
margin_bottom = 563.0
custom_fonts/font = SubResource( 6 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
margin_left = 48.0
margin_top = 171.0
margin_right = 995.0
margin_bottom = 489.0
custom_fonts/font = SubResource( 7 )
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="HTTPRequest" to="HTTPRequest" method="_on_HTTPRequest_request_completed"]
[connection signal="value_changed" from="QuestionSet1/q1a6/q1eSlider" to="." method="_on_q1eSlider_value_changed"]
[connection signal="value_changed" from="QuestionSet1/q1a5/q1dSlider" to="." method="_on_q1dSlider_value_changed"]
[connection signal="value_changed" from="QuestionSet1/q1a4/q1cSlider" to="." method="_on_q1cSlider_value_changed"]
[connection signal="value_changed" from="QuestionSet1/q1a3/q1bSlider" to="." method="_on_q1bSlider_value_changed"]
[connection signal="value_changed" from="QuestionSet1/q1a2/q1aSlider" to="." method="_on_q1aSlider_value_changed"]
[connection signal="value_changed" from="QuestionSet3/q3/a3" to="." method="_on_a3_value_changed"]
[connection signal="value_changed" from="QuestionSet3/q2/a2" to="." method="_on_a2_value_changed"]
[connection signal="value_changed" from="QuestionSet3/q1/a1" to="." method="_on_a1_value_changed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
